--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <div class="stats" id="stats"></div>
     </div>
 
-    <footer>
+    <div class="footer">
         &copy; 2025 - All rights reserved. Debjit Dey
-    </footer>
+    </div>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
