Site Style Changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>My Todo List</h1>
+            <h1>Todo List - Everyday Task</h1>
             <button class="theme-toggle" aria-label="Toggle dark mode">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8V16Z" fill="currentColor"/>
