--- a/index.html
+++ b/index.html
@@ -12,16 +12,18 @@
 <body>
     <div class="container">
         <header>
-            <h1>Todo List - Everyday Task</h1>
-            <p>List everyday tasks here, and remove each task once it's completed to keep the task area clean and organized.</p>
-            <div class="toggle-swich">
-                <button class="theme-toggle" aria-label="Toggle dark mode">
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8V16Z" fill="currentColor"/>
-                        <path fill-rule="evenodd" clip-rule="evenodd" d="M12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2ZM12 4V8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16V20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4Z" fill="currentColor"/>
-                    </svg>
-                </button>
+            <div class="heading-and-toggle">
+                <h1>Todo List - Everyday Task</h1>
+                <div class="toggle-swich">
+                    <button class="theme-toggle" aria-label="Toggle dark mode">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8V16Z" fill="currentColor"/>
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2ZM12 4V8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16V20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4Z" fill="currentColor"/>
+                        </svg>
+                    </button>
+                </div>
             </div>
+            <p>List everyday tasks here, and remove each task once it's completed to keep the task area clean and organized.</p>
         </header>
         
         <form class="todo-form">
